1999-07-25  Rosanna Yuen  <rwsy@mit.edu>

	* eagle_wing.scm (complete-transaction): fixed the status bar
	message discrepancy in this game.

1999-07-23  Rosanna Yuen  <rwsy@mit.edu>

	* kansas.scm (empty-tableau?): makes sure that no cards can be
	moved down before game is officially over.

1999-07-23  Robert Brady <rwb197@ecs.soton.ac.uk>

	* events.c: Fixed bug #1192 (dragging a card to the toolbar and
	releasing mouse button there caused odd things).

1999-07-10  Rosanna Yuen  <rwsy@mit.edu>

	* kansas.scm: fixed a bug in this game.

1999-06-29  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* SCHEME_GAMES.h: Added more translatable strings. i18n in Aisleriot
	(especially for Hints), is somewhat broken, it appears that only
	languages with the same word order as English can be translated into.

1999-06-15  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* card.h, cscmi.h, dialog.h, events.h, menu.h, press_data.h, sol.h, splash.h: Use
	ANSI C prototypes for functions with no parameters.

	* events.h, events.c: Moved STATUS_* things into the header.

	* events.c (waiting_for_mouse_up): Added.

	* menu.c, dialog.c: Inserted calls to waiting_for_mouse_up where needed.

	* sol.c: (is_game) Fixed warning.

	* clock.scm: Fix typo.

1999-06-13  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* cscmi.c (scm_set_statusbar_message): Return a value.

	* press.data.c (generate_press_data): Make definition agree with the prototype.

	* sol.c (create_press_data): Initialise press_data->status.

	* events.c (button_press_event): Ignore button 3 presses whilst a card is 
	being dragged, fixing bug #1469.
	(button_release_event):	Ignore buttons releases if the button that caused 
	the current state is still down (i.e. no more button3 click, button1 click,
	button1 release causing STATUS_SHOW to end.)
	
1999-05-24  Brandon S. Allbery" <allbery@ece.cmu.edu>

	* cscmi.c (cscm_init): Renamed scm_random to scm_myrandom, since
	scm_random is part of recent Guiles.

1999-04-12  Rosanna Yuen  <rwsy@mit.edu>