@@ -258,8 +258,10 @@
 (define (check-a-tableau-list card card-list)
   (cond ((= (length card-list) 0)
 	 #f)
-	((= (get-value card)
-	    (+ 1 (get-value (car card-list))))
+	((or (= (get-value card)
+		(+ 1 (get-value (car card-list))))
+	     (and (= (get-value card) ace)
+		  (= (get-value (car card-list)) king)))
 	 (and (or (check-a-foundation (cadr card-list) 2)
 		  (eq? (get-suit card)
 		       (get-suit (car card-list))))
@@ -275,8 +277,11 @@
 	((or (= slot2 1)
 	     (= slot2 6))
 	 (or (and (not (empty-slot? slot2))
-		  (= (get-value (get-top-card slot1))
-		     (+ 1 (get-value (get-top-card slot2))))
+		  (or
+		   (= (get-value (get-top-card slot1))
+		      (+ 1 (get-value (get-top-card slot2))))
+		   (and (= (get-value (get-top-card slot1)) ace)
+			(= (get-value (get-top-card slot2)) king)))
 		  (list 1 
 			(get-name (get-top-card slot2))
 			(get-name (get-top-card slot1))))
@@ -290,10 +295,18 @@
 	       (get-name (car (reverse (get-cards slot2))))
 	       (get-name (get-top-card slot1))))
 	((and (not (empty-slot? slot2))
-	      (> (get-value (get-top-card slot1))
-		 (get-value (get-top-card slot2)))
-	      (< (get-value (get-top-card slot1))
-		 (get-value (car (reverse (get-cards slot2)))))
+	      (or (> (get-value (get-top-card slot1))
+		     (get-value (get-top-card slot2)))
+		  (and (>= (get-value (get-top-card slot1)) ace)
+		       (< (get-value (get-top-card slot1)) BASE-VAL)
+		       (<= (get-value (get-top-card slot2)) king)
+		       (> (get-value (get-top-card slot2)) BASE-VAL)))
+	      (or (<= (get-value (get-top-card slot1))
+		      (get-value (car (reverse (get-cards slot2)))))
+		  (and (<= (get-value (get-top-card slot1)) king)
+		       (> (get-value (get-top-card slot1)) BASE-VAL)
+		       (>= (get-value (car (reverse (get-cards slot2)))) ace)
+		       (< (get-value (car (reverse (get-cards slot2)))) BASE-VAL)))
 	      (check-a-tableau-list (get-top-card slot1)
 				    (get-cards slot2)))
 	 (check-a-tableau-list (get-top-card slot1)
