@@ -1,3 +1,8 @@
+1999-08-01  Rosanna Yuen  <rwsy@mit.edu>
+
+	* kansas.scm (check-a-tableau): made the hint function for this
+	game smarter than me.
+
 1999-07-25  Rosanna Yuen  <rwsy@mit.edu>
 
 	* eagle_wing.scm (complete-transaction): fixed the status bar
